--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section class="hero">
   <div class="container">
-    <h1>Professional CNC Training & Engineering Support</h1>
+    <h1>Professional in house CNC Training & Engineering Support</h1>
     <p>Helping UK manufacturers enhance productivity, improve quality, and boost CNC capabilities.</p>
     <a href="#contact" class="btn btn-primary">Get in Touch</a>
   </div>
