--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="cards">
       <div class="card">
         <h3>CNC Training</h3>
-        <p>Operator, setter, and programmer training tailored to your machines.</p>
+        <p>Operator, setter, and programmer in house training tailored to your machines.</p>
       </div>
       <div class="card">
         <h3>Process Improvement</h3>
@@ -41,7 +41,7 @@
       </div>
       <div class="card">
         <h3>Technical Consultancy</h3>
-        <p>Support for new machine installations and manufacturing challenges.</p>
+        <p>Support in new machines purchasing, costing, payback and manufacturing challenges.</p>
       </div>
     </div>
   </div>
