--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
   <div class="container">
-    <img src="logo.png" alt="CNC Pro Solutions Logo" class="logo">
+    <img src="logo.png" alt="Logo" style="width:400px; height:auto;">
     <nav>
       <a href="#services">Services</a>
       <a href="#about">About</a>
