--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Training</title>
   <style>
-    /* Reset default styles */
+    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -14,30 +14,56 @@
     }
 
     body {
-      color: #fff;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      background-color: #f5f5f5;
+      color: #fff;
+    }
+
+    /* Navigation */
+    nav {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      background-color: rgba(0,0,0,0.7);
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+      z-index: 10;
+    }
+
+    nav a {
+      color: #fff;
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #50E3C2;
     }
 
     /* Hero Section */
     .hero {
       position: relative;
-      height: 80vh; /* full hero height */
-      background-image: url('hero.jpg'); /* replace with your image */
+      height: 80vh;
+      background-image: url('hero-background.jpg'); /* replace with your image */
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-top: 60px; /* space for fixed nav */
     }
 
     .hero-overlay {
       text-align: center;
-      background-color: rgba(0,0,0,0.4); /* semi-transparent overlay */
+      background-color: rgba(0,0,0,0.4);
       padding: 40px;
-      border-radius: 20px; /* optional styling */
+      border-radius: 20px;
     }
 
     .hero h1 {
@@ -46,19 +72,17 @@
     }
 
     .hero-logo {
-      width: 180px; /* adjust logo size */
+      width: 180px;
       height: auto;
     }
 
     /* Main Section */
     main {
       flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background-color: #4A90E2;
+      color: #fff;
       text-align: center;
-      padding: 40px 20px;
-      background-color: #4A90E2; /* optional secondary section color */
+      padding: 60px 20px;
     }
 
     main h2 {
@@ -69,8 +93,8 @@
     main p {
       font-size: 18px;
       max-width: 700px;
+      margin: 0 auto 30px auto;
       line-height: 1.6;
-      margin-bottom: 30px;
     }
 
     .cta-button {
@@ -84,9 +108,96 @@
       cursor: pointer;
       text-decoration: none;
       transition: 0.3s;
+      display: inline-block;
     }
 
     .cta-button:hover {
+      background-color: #f0f0f0;
+    }
+
+    /* Services Section */
+    .services {
+      padding: 60px 20px;
+      background-color: #fff;
+      color: #333;
+      text-align: center;
+    }
+
+    .services h2 {
+      font-size: 36px;
+      margin-bottom: 40px;
+      color: #4A90E2;
+    }
+
+    .service-cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    .service-card {
+      background-color: #f0f0f0;
+      color: #333;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 250px;
+      flex: 1;
+      transition: 0.3s;
+    }
+
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
+
+    .service-card h3 {
+      margin-bottom: 15px;
+      color: #4A90E2;
+    }
+
+    /* Contact Section */
+    .contact {
+      padding: 60px 20px;
+      background-color: #50E3C2;
+      color: #fff;
+      text-align: center;
+    }
+
+    .contact h2 {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    .contact form {
+      max-width: 500px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .contact input,
+    .contact textarea {
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+    }
+
+    .contact button {
+      background-color: #fff;
+      color: #50E3C2;
+      padding: 15px;
+      font-size: 18px;
+      font-weight: bold;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .contact button:hover {
       background-color: #f0f0f0;
     }
 
@@ -94,40 +205,96 @@
     footer {
       text-align: center;
       padding: 20px;
-      background-color: rgba(0,0,0,0.2);
+      background-color: #333;
       font-size: 14px;
+      color: #fff;
     }
 
-    /* Responsive Design */
+    /* Responsive */
     @media (max-width: 768px) {
+      nav a {
+        margin: 0 10px;
+        font-size: 14px;
+      }
+
       .hero h1 {
         font-size: 36px;
       }
+
       .hero-logo {
         width: 140px;
       }
-      main h2 {
+
+      main h2,
+      .services h2,
+      .contact h2 {
         font-size: 28px;
+      }
+
+      main p {
+        font-size: 16px;
+      }
+
+      .service-cards {
+        flex-direction: column;
+        gap: 20px;
       }
     }
   </style>
 </head>
 <body>
 
+  <!-- Navigation -->
+  <nav>
+    <a href="#hero">Home</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
   <!-- Hero Section -->
-  <header class="hero">
+  <header class="hero" id="hero">
     <div class="hero-overlay">
       <h1>Professional Training</h1>
       <img src="logo.png" alt="Your Logo" class="hero-logo">
     </div>
   </header>
 
-  <!-- Main Content -->
+  <!-- Main Section -->
   <main>
     <h2>Empowering Your Skills for Success</h2>
     <p>Our professional training programs are designed to enhance your expertise and unlock your full potential. Join us to gain hands-on knowledge, industry insights, and personalized guidance to advance your career.</p>
     <a href="#contact" class="cta-button">Get Started</a>
   </main>
+
+  <!-- Services Section -->
+  <section class="services" id="services">
+    <h2>Our Services</h2>
+    <div class="service-cards">
+      <div class="service-card">
+        <h3>Skill Workshops</h3>
+        <p>Hands-on workshops to develop practical skills and knowledge for your career growth.</p>
+      </div>
+      <div class="service-card">
+        <h3>Professional Coaching</h3>
+        <p>Personalized coaching to guide you through career challenges and development.</p>
+      </div>
+      <div class="service-card">
+        <h3>Certifications</h3>
+        <p>Gain recognized certifications to validate your expertise and advance professionally.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -136,4 +303,3 @@
 
 </body>
 </html>
-
