--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     .hero {
       position: relative;
       height: 80vh;
-      background-image: url('hero-background.jpg'); /* replace with your image */
+      background-image: url('hero.jpg'); /* replace with your image */
       background-size: cover;
       background-position: center;
       display: flex;
